syntax = "proto3";

option go_package = "../email";

package email;

message EmailStatus {
    string To     = 1;
    bool Err      = 2;
    string ErrMsg = 3;
}

message PushEmailRequest {
    repeated string To               = 1;
    repeated string TemplateParamSet = 2;
    uint32 TemplateID                = 3;
    string Subject                   = 4;
}

message PushEmailResponse {
    repeated EmailStatus EmailStatus = 1;
}

message EmailTemplate {
    string Content      = 1;
    uint32 ParamNumber  = 2;
    uint32 TemplateID   = 3;
    string TemplateName = 4;
}

message AddEmailTemplateRequest {
    repeated EmailTemplate EmailTemplate = 1;
}

message AddEmailTemplateResponse {
    bool Success                     = 1;
    repeated EmailTemplate templates = 2;
}

message GetAllTemplatesRequest {}

message GetAllTemplatesResponse {
    bool Err                             = 1;
    string ErrMsg                        = 2;
    repeated EmailTemplate EmailTemplate = 3;
}

service EmailService {
    rpc PushEmail(PushEmailRequest) returns (PushEmailResponse);
    rpc AddEmailTemplate(AddEmailTemplateRequest)
        returns (AddEmailTemplateResponse);
    rpc GetAllEmailTemplate(GetAllTemplatesRequest)
        returns (GetAllTemplatesResponse);
}
